refs #1240 fix mvn test fail for commons module